--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
               </div>
               <div class="card-body">
                 <h5 class="card-title" id="cardSobreTitle">Sales</h5>
-                <p class="card-text">Programador Web e Artísta Autônomo</p>
+                <p class="card-text">Programador Web e Artista Autônomo</p>
                 <div class="containerButton">
                   <a href="./src/Curriculo.pdf">
                     <button type="button" class="btn btn-primary btn-sm">Currículo <i
@@ -170,9 +170,9 @@
   <section id="Portfolio">
     <div class="container">
       <h1>Portfólio</h1>
-      <p>Aqui algumas imagens dos meus principais projetos.</p>
+      <p>Aqui estão imagens de alguns projetos.</p>
       <p>Não são todas as imagens que representam sua versão final. O pouco que aqui se encontra, resume
-        boa parte da minha competência na área.
+        uma parte da minha competência na área.
       </p>
       <div id="carouselExampleCaptions" class="carousel slide">
         <div class="carousel-indicators">
@@ -241,7 +241,7 @@
     <div class="container" id="paginascontent">
       <h2>Páginas</h2>
       <p class="cardTextPage">Aqui estão algumas páginas web que criei enquanto estudava programação web.<br>Algumas
-        páginas são mais antigas e contém alguns bugs enquanto outras ainda estão em desenvolvimento</p>
+        páginas são mais antigas e contém alguns bugs, enquanto outras ainda estão em desenvolvimento</p>
       <div class="pagesContainer">
         <!-- Page I-->
         <div class="card" style="width: 18rem;">
